[tool.poetry]
name = "dev-scripts"
version = "0.1.0"
description = "scripts to create github repo public or private with httpx or with requests"
authors = ["mikikop <39693826+mikikop@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
